fixed code spacing

--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,7 @@ body {
   -webkit-transform-origin: center;
   transform-origin: center;
 }
+
 @-webkit-keyframes waves {
   0% {
     -webkit-transform: translateX(0px) 
@@ -255,6 +256,10 @@ body {
   transition: all 3000ms linear;
 }
 
+
+.anchor-arrow {
+  width: 8%;
+}
  
 }
 
@@ -269,6 +274,4 @@ body {
   -webkit-transition: all 3000ms linear;
   transition: all 3000ms linear;
 }
-
-
-  }
+}
